--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
       body { margin: 0; overflow: hidden; }
       canvas { display: block; }
     </style>
+    <!-- 引入 Three.js 和相关 loader -->
+    <script src="https://unpkg.com/three@0.160.1/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.160.1/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://unpkg.com/three@0.160.1/examples/js/loaders/GLTFLoader.js"></script>
   </head>
   <body>
-    <script type="module">
-      import * as THREE from 'https://unpkg.com/three@0.160.1/build/three.module.js';
-      import { OrbitControls } from 'https://unpkg.com/three@0.160.1/examples/jsm/controls/OrbitControls.js';
-      import { GLTFLoader } from 'https://unpkg.com/three@0.160.1/examples/jsm/loaders/GLTFLoader.js';
-
+    <script>
       const scene = new THREE.Scene();
-      scene.background = new THREE.Color(0xffffff); // 可自定义背景色
+      scene.background = new THREE.Color(0xffffff);
 
-      const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+      const camera = new THREE.PerspectiveCamera(
+        75,
+        window.innerWidth / window.innerHeight,
+        0.1,
+        1000
+      );
       camera.position.set(1, 1, 3);
 
       const renderer = new THREE.WebGLRenderer({ antialias: true });
       renderer.setSize(window.innerWidth, window.innerHeight);
       document.body.appendChild(renderer.domElement);
 
-      const controls = new OrbitControls(camera, renderer.domElement);
+      const controls = new THREE.OrbitControls(camera, renderer.domElement);
       controls.enableDamping = true;
 
       const light1 = new THREE.HemisphereLight(0xffffff, 0x444444, 1);
@@ -32,25 +37,26 @@
       light2.position.set(1, 1, 1);
       scene.add(light1, light2);
 
-      const loader = new GLTFLoader();
-      loader.load('./model.glb', gltf => {
+      const loader = new THREE.GLTFLoader();
+      loader.load('model.glb', function (gltf) {
         scene.add(gltf.scene);
-      }, undefined, error => {
+      }, undefined, function (error) {
         console.error('加载模型失败:', error);
       });
 
-      window.addEventListener('resize', () => {
+      window.addEventListener('resize', function () {
         camera.aspect = window.innerWidth / window.innerHeight;
         camera.updateProjectionMatrix();
         renderer.setSize(window.innerWidth, window.innerHeight);
       });
 
-      const animate = () => {
+      function animate() {
         requestAnimationFrame(animate);
         controls.update();
         renderer.render(scene, camera);
-      };
+      }
       animate();
     </script>
   </body>
 </html>
+
