--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       body { margin: 0; overflow: hidden; }
       canvas { display: block; }
     </style>
-    <!-- 非模块化方式加载 Three.js 和加载器 -->
-    <script src="https://unpkg.com/three@0.160.1/build/three.min.js"></script>
-    <script src="https://unpkg.com/three@0.160.1/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://unpkg.com/three@0.160.1/examples/js/controls/OrbitControls.js"></script>
+    <!-- 👇 Three.js r149 + 兼容加载器 -->
+    <script src="https://unpkg.com/three@0.149.0/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.149.0/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://unpkg.com/three@0.149.0/examples/js/loaders/GLTFLoader.js"></script>
   </head>
   <body>
     <script>
@@ -59,3 +59,4 @@
     </script>
   </body>
 </html>
+
