--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
       body { margin: 0; overflow: hidden; }
       canvas { display: block; }
     </style>
-    <!-- 👇 Three.js r149 + 兼容加载器 -->
-    <script src="https://unpkg.com/three@0.149.0/build/three.min.js"></script>
-    <script src="https://unpkg.com/three@0.149.0/examples/js/controls/OrbitControls.js"></script>
-    <script src="https://unpkg.com/three@0.149.0/examples/js/loaders/GLTFLoader.js"></script>
   </head>
   <body>
-    <script>
+    <script type="module">
+      import * as THREE from 'https://unpkg.com/three@0.160.1/build/three.module.js';
+      import { OrbitControls } from 'https://unpkg.com/three@0.160.1/examples/jsm/controls/OrbitControls.js';
+      import { GLTFLoader } from 'https://unpkg.com/three@0.160.1/examples/jsm/loaders/GLTFLoader.js';
+
       const scene = new THREE.Scene();
-      scene.background = new THREE.Color(0xffffff);
+      scene.background = new THREE.Color(0xf0f0f0);
 
       const camera = new THREE.PerspectiveCamera(
         75,
@@ -23,13 +23,13 @@
         0.1,
         1000
       );
-      camera.position.set(1, 1, 3);
+      camera.position.set(2, 2, 3);
 
       const renderer = new THREE.WebGLRenderer({ antialias: true });
       renderer.setSize(window.innerWidth, window.innerHeight);
       document.body.appendChild(renderer.domElement);
 
-      const controls = new THREE.OrbitControls(camera, renderer.domElement);
+      const controls = new OrbitControls(camera, renderer.domElement);
       controls.enableDamping = true;
 
       const light1 = new THREE.HemisphereLight(0xffffff, 0x444444, 1);
@@ -37,14 +37,19 @@
       light2.position.set(1, 1, 1);
       scene.add(light1, light2);
 
-      const loader = new THREE.GLTFLoader();
-      loader.load('model.glb', function (gltf) {
-        scene.add(gltf.scene);
-      }, undefined, function (error) {
-        console.error('加载模型失败:', error);
-      });
+      const loader = new GLTFLoader();
+      loader.load(
+        'model.glb',
+        (gltf) => {
+          scene.add(gltf.scene);
+        },
+        undefined,
+        (error) => {
+          console.error('加载模型失败:', error);
+        }
+      );
 
-      window.addEventListener('resize', function () {
+      window.addEventListener('resize', () => {
         camera.aspect = window.innerWidth / window.innerHeight;
         camera.updateProjectionMatrix();
         renderer.setSize(window.innerWidth, window.innerHeight);
@@ -59,4 +64,5 @@
     </script>
   </body>
 </html>
+
 
